test/assets/invalid/signatures/missing-trailing-arg.hs
a :: String
a x = length x